src/test/deca/etapeB/invalid/println_bool.deca
// Description : 
// 	test d'affichage d'un boolean  
//Resultat:
//      Erreur Contextuelle :type non supporté,println supporte int,float,string
{
   println(true);
}